#139 Minor refactor.